2003-09-25  Daniel Steffen  <das@users.sourceforge.net>

	* library/demos/widget: don't create iconwindow on aqua, but add
	about menu like on classic.
	* macosx/Makefile: pass MAKEOVERRIDES to pxbuild.
	* macosx/tkMacOSXButton.c: added -compound support for bevel buttons.

	* unix/configure:
	* unix/configure.in:
	* unix/tkConfig.sh.in: added TK_INCLUDE_SPEC to allow extensions to
	find installed Tk headers, parallel to TCL_INCLUDE_SPEC. [Bug 777203] 

2003-09-18  Chengye Mao <chengye.geo@yahoo.com>
	* generic/tkConsole.c: Fixed memroy leak [Bug 802435]

2003-09-18  Peter Spjuth  <peter.spjuth@space.se>
	* doc/grid.n:
	* tests/grid.test:
	* generic/tkGrid.c: Implementation of TIP#147,
	"Make Grid's Column/Row Configure Easier".

2003-09-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkImage.c:	Stopped [image create] from generating an
	* tests/image.test:	image command name that would overwrite an
	existing command name.  Thanks to Michael Schlenker.  [Bug 808039].

2003-09-16  Peter Spjuth  <peter.spjuth@space.se>
	* tests/grid.test:
	* generic/tkGrid.c: Reworked a part of grid's geometry computations
	to handle some tricky cases better. [Bug #792387]

2003-09-05  Joe English  <jenglish@users.sourceforge.net>
	* doc/bind.n: Describe %P and %s substitution for
	Property events. [BUG #577906 "%P substitution not documented"]

2003-09-05  Don Porter  <dgp@users.sourceforge.net>

	* doc/wish.1:			Implementation of TIPs 137/151.
	* generic/tkMain.c (Tk_MainEx):	Added recognition of the -encoding
	* tests/main.test:		command line option by Tk_MainEx()
	and thus by wish, and any other program built on Tk_MainEx().
	[Patch 800139].
        This is a ***POTENTIAL INCOMPATIBILITY*** only for those C programs
        that embed Tcl and Tk, build on Tk_MainEx(), and make use of
	Tk_MainEx's former ability to pass a leading "-encoding" option to
	interactive shell operations.

2003-08-27  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
